@@ -180,7 +180,7 @@ TW_INT16 CTWAINContainerFix32::Set(pTW_CAPABILITY _pCap, TW_INT16 &Condition)
           }
           else
           {
-            twrc = TWRC_CHECKSTATUS;
+            twrc = TWRC_FAILURE;
             Condition = TWCC_BADVALUE;
           }
         }
@@ -204,12 +204,10 @@ TW_INT16 CTWAINContainerFix32::Set(pTW_CAPABILITY _pCap, TW_INT16 &Condition)
 
     if(isValidType(pCap->ItemType))
     {
-      m_nCurrent = pCap->CurrentIndex;
-      // We ignor trying to set the default.  The default can not be changed from outside
-
+      int  nNewCurrentIndex  = pCap->CurrentIndex;
       FloatVector::iterator iter;
-      m_listFloats.clear();
-
+      bool bListCleared      = false; // We only want to crear the current list if we are passed 
+                                      // valid data, and only clear it once through the loop of testing
       float flVal;
 
       for(TW_UINT32 x = 0; x < pCap->NumItems; ++x)
@@ -221,20 +219,65 @@ TW_INT16 CTWAINContainerFix32::Set(pTW_CAPABILITY _pCap, TW_INT16 &Condition)
 
         if(iter != m_listFloatsDefault.end())
         {
-          m_listFloats.push_back(flVal);          
+          // We have valid data
+          if(!bListCleared)
+          {
+            // only clear the list if we have not done so already
+            m_listFloats.clear();
+            bListCleared = true;
+          }
+
+          // only add it if it was not added already
+          iter = find(m_listFloats.begin(), m_listFloats.end(), flVal);
+          if(iter == m_listFloats.end())
+          {
+            m_listFloats.push_back(flVal);
+          }
+          else
+          {
+            nNewCurrentIndex--;
+            twrc = TWRC_CHECKSTATUS;
+            Condition = TWCC_BADVALUE;
+          }
         }
         else
         {
-          // if the index was pointing to this value we have to change it because this value is now invalid
-          if(x == (UINT)m_nCurrent) // casting to uint to remove compiler warning
+          // if the index is below the current then we need to adjust what is going to be current
+          if(x < pCap->CurrentIndex)
           {
-            m_nCurrent = 0;
+            nNewCurrentIndex--;
           }
 
           twrc = TWRC_CHECKSTATUS;          
-          Condition = TWCC_SUCCESS;
+          Condition = TWCC_BADVALUE;
         }
       }
+
+      // If the list has been cleared then there was at at least some valid data
+      if(bListCleared)
+      {
+        if(nNewCurrentIndex >= 0 && nNewCurrentIndex < (int)(m_listFloats.size()))
+        {
+          m_nCurrent = nNewCurrentIndex;
+        }
+        else
+        {
+          // the new current index is not in range
+          m_nCurrent = 0;
+          twrc = TWRC_CHECKSTATUS;
+          Condition = TWCC_BADVALUE;
+        }
+      }
+      else
+      {
+        twrc = TWRC_FAILURE;
+        Condition = TWCC_BADVALUE;
+      }
+    }
+    else // NOT isValidType(pCap->ItemType))
+    {
+      twrc = TWRC_FAILURE;
+      Condition = TWCC_CAPBADOPERATION;
     }
 
     _DSM_UnlockMemory((TW_MEMREF)pCap);
